<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/map_operate_icon_background_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/id_button_addcancel"
            style="@style/white_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_addcancel_point"
            android:textColor="@color/red" />

        <View style="@style/viewbar_seperate_vehicle_style" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/id_button_verticalwelding"
            style="@style/white_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_verticalwelding" />

        <View style="@style/viewbar_seperate_vehicle_style" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/id_button_transformerchamber"
            style="@style/white_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_transformerchamber" />

        <View style="@style/viewbar_seperate_vehicle_style" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/id_button_doormeter"
            style="@style/white_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_doormeter" />

        <View style="@style/viewbar_seperate_vehicle_style" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/id_button_cablepit"
            style="@style/white_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_cablepit" />

    </LinearLayout>

    <View style="@style/viewbar_seperate_horizontal_style" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/id_button_boxswitchstation"
            style="@style/white_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_boxswitchstation" />

        <View style="@style/viewbar_seperate_vehicle_style" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/id_button_spswitchingpost"
            style="@style/white_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_spswitchingpost" />

        <View style="@style/viewbar_seperate_vehicle_style" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/id_button_boxtypesubstation"
            style="@style/white_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_boxtypesubstation" />

    </LinearLayout>
</LinearLayout>