<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/map_operate_icon_background_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="horizontal">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/id_button_addcancel2"
        style="@style/white_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/string_addcancel_crossline"
        android:textColor="@color/red" />

    <View style="@style/viewbar_seperate_vehicle_style" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/id_button_line_start"
        style="@style/white_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/string_line_start" />

    <View style="@style/viewbar_seperate_vehicle_style" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/id_button_line_end"
        style="@style/white_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/string_line_end" />
</LinearLayout>