<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/id_popupwindow_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:animateLayoutChanges="true"
        android:background="@color/darkgray"
        android:orientation="vertical">

        <Button
            android:id="@+id/id_popupwindow_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="2dp"
            android:background="@color/content_background_color"
            android:text="@string/string_popupwindow_images"
            android:textSize="18sp" />

        <Button
            android:id="@+id/id_popupwindow_tocamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/content_background_color"
            android:text="@string/string_popupwindow_camera"
            android:textSize="18sp" />

        <Button
            android:id="@+id/id_popupwindow_cancal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@color/content_background_color"
            android:text="@string/string_popupwindow_cancel"
            android:textColor="@color/red"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>