<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/id_dialog_picker_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <com.hz.view.ClearAbleEditText
            android:id="@+id/id_clearableedittext_dialog_listview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/clearableedittext_dialog_listview_hint" />

        <ListView
            android:id="@+id/id_pickerlistview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/id_picker_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_picker_cancel" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/id_picker_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_picker_ok" />
        </android.support.v7.widget.ButtonBarLayout>

    </LinearLayout>
</FrameLayout>




