<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_material_common"/>


    <!--图片-->
    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/id_imageview_login"
        android:layout_width="fill_parent"
        android:layout_height="190dp"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:paddingTop="40dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.hz.view.ValidaterEditText
                    android:id="@+id/id_edittext_username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:hint="@string/string_login_username"
                    android:singleLine="true"
                    app:validateNotContactSpecialCharactor="true"
                    app:validateNoteBlank="true" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.hz.view.ValidaterEditText
                    android:id="@+id/id_edittext_passwd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:hint="@string/string_login_passwd"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    app:validateNotContactSpecialCharactor="true"
                    app:validateNoteBlank="true" />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/id_button_login"
                style="@style/button_status_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/string_login_login"
                android:textColor="?attr/colorAccent"
                android:textSize="25sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
